--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -153,12 +153,20 @@ span.black-highlight {
 
 .default-hero {
 	h1 {
-		font-size: modular-scale(5, 1.3rem);
-		line-height:modular-scale(5, 1.3rem);
+		font-size: modular-scale(3, 1.3rem);
+		line-height:modular-scale(3, 1.3rem);
 		margin: 0 10%;
 		padding-bottom: 0;
 		color: $white;
 		text-align: left;
+		@include media($bp-med) {
+			font-size: modular-scale(4, 1.3rem);
+			line-height:modular-scale(4, 1.3rem);
+		}
+		@include media($bp-large) {
+			font-size: modular-scale(5, 1.3rem);
+			line-height:modular-scale(5, 1.3rem);
+		}
 	}
 	h2 {
 		font-family: $p-font;
@@ -292,8 +300,8 @@ h2.team__hero-subheading {
 }
 
 .team__name {
-	font-size: modular-scale(4);
-	line-height:modular-scale(3);
+	font-size: modular-scale(3);
+	line-height:modular-scale(2);
 	position: relative;
 	color: rgba(0,0,0,0.8);
 	transition: all 0.5s;
