--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -8,7 +8,11 @@
 	@include align-items(flex-start);
 	@include justify-content(space-between);
 	@include flex-wrap(wrap);
+	@include flex-direction(column);
 	min-height: 100vh;
+	@include media($bp-large) {
+		@include flex-direction(row);
+	}
 }
 
 .contact__single {
