--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -78,6 +78,10 @@
 			margin-bottom: 25px;
 		}
 	}
+	@include media($bp-small) {
+		background-image: url('dist/images/site.jpg');
+		// filter: grayscale(80%) brightness(0.6) opacity(1);
+	}
 }
 
 .default-hero {
