--- a/custom/themes/ingenuity/src/sass/layout/_team.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_team.scss
@@ -26,14 +26,19 @@
 	.team__single {
 		background-color: $yellow;
 		position: relative;
-		min-height: 300px;
+		min-height: 200px;
 		width: 100%;
 		// margin-bottom: 25px;
 		transition: all 0.5s;
+		border-bottom: 2px solid $black;
 		@include display(flex);
 		@include align-items(flex-start);
 		@include justify-content(center);
 		@include flex-direction(column);
+		@include media($bp-large) {
+			min-height: 300px;
+			border-bottom: 0;
+		}
 		&:hover {
 			cursor: pointer;
 			background-color: $black;
