--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -3,6 +3,7 @@
     // margin-right: -50%;
     width: 100%;
     position: relative;
+    min-height: 100vh;
     @include display(flex);
     @include align-items(flex-start);
     @include justify-content(center);
