--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -46,6 +46,7 @@
 .gallery__single-half.gallery-image {
     position: relative;
     @include media($bp-small) {
+        min-height: 50vh;
         @include display(flex);
         @include align-items(center);
         @include justify-content(center);
@@ -64,6 +65,9 @@
     background-color: $yellow;
     padding: 25px;
     min-height: auto;
+    @include media($bp-small) {
+        min-height: 50vh;
+    }
     p {
         margin: 0;
     }
