--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -40,6 +40,7 @@
     }
     @include media($bp-small) {
         min-height: 100px;
+        @include flex(1 0 auto);
     }
 }
 
@@ -66,7 +67,7 @@
     padding: 25px;
     min-height: auto;
     @include media($bp-small) {
-        min-height: 50vh;
+        // min-height: 50vh;
     }
     p {
         margin: 0;
