--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -1083,7 +1083,13 @@ span.menu-icon {
       flex: 0 0 50%; } }
   @media screen and (max-width: 30em) {
     .gallery__single-half {
-      min-height: 100px; } }
+      min-height: 100px;
+      -webkit-box-flex: 1;
+      box-flex: 1;
+      -webkit-flex: 1 0 auto;
+      -moz-flex: 1 0 auto;
+      -ms-flex: 1 0 auto;
+      flex: 1 0 auto; } }
 
 .gallery__single-half.gallery-image {
   position: relative; }
@@ -1124,9 +1130,6 @@ span.menu-icon {
   background-color: #fcd838;
   padding: 25px;
   min-height: auto; }
-  @media screen and (max-width: 30em) {
-    .gallery__single-half.gallery-caption {
-      min-height: 50vh; } }
   .gallery__single-half.gallery-caption p {
     margin: 0; }
 
