--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -29,6 +29,9 @@
     @include media($bp-large) {
         @include flex-direction(row);
     }
+    @include media($bp-large) {
+        @include flex(1 0 auto);
+    }
 }
 
 .gallery__single-half {
@@ -47,7 +50,7 @@
 .gallery__single-half.gallery-image {
     position: relative;
     @include media($bp-small) {
-        min-height: 50vh;
+        // min-height: 50vh;
         @include display(flex);
         @include align-items(center);
         @include justify-content(center);
