--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -94,7 +94,7 @@
 		left: 0;
 		background-position: center center;
 		width: 100%;
-		height: 100%;
+		height: auto; // or 100%?
 		filter: grayscale(80%) brightness(0.6) opacity(1);
 		z-index: 50;
 	}
