--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -1069,6 +1069,14 @@ span.menu-icon {
       -moz-flex-direction: row;
       flex-direction: row;
       -ms-flex-direction: row; } }
+  @media screen and (min-width: 50em) {
+    .gallery__single {
+      -webkit-box-flex: 1;
+      box-flex: 1;
+      -webkit-flex: 1 0 auto;
+      -moz-flex: 1 0 auto;
+      -ms-flex: 1 0 auto;
+      flex: 1 0 auto; } }
 
 .gallery__single-half {
   position: relative;
@@ -1095,7 +1103,6 @@ span.menu-icon {
   position: relative; }
   @media screen and (max-width: 30em) {
     .gallery__single-half.gallery-image {
-      min-height: 50vh;
       display: -webkit-box;
       display: -moz-box;
       display: box;
@@ -3709,7 +3716,7 @@ Copyright (c) 2015 Daniel Eden
     left: 0;
     background-position: center center;
     width: 100%;
-    height: 100%;
+    height: auto;
     -webkit-filter: grayscale(80%) brightness(0.6) opacity(1);
             filter: grayscale(80%) brightness(0.6) opacity(1);
     z-index: 50; }
