Update: project template gallery

--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -1,5 +1,6 @@
 .project__gallery {
     width: 100%;
+    min-height: 200vh; 
     position: relative;
     @include display(flex);
     @include align-items(flex-start);
