--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -1038,8 +1038,7 @@ span.menu-icon {
       box-lines: multiple;
       -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-      min-height: 200vh; } }
+      flex-wrap: wrap; } }
 
 .gallery__single {
   margin: 0 0 30px;
@@ -1106,12 +1105,10 @@ span.menu-icon {
       -webkit-flex-direction: column;
       -moz-flex-direction: column;
       flex-direction: column;
-      -ms-flex-direction: column;
-      min-height: 100vh; } }
+      -ms-flex-direction: column; } }
 
 .gallery__single-half {
-  position: relative;
-  min-height: 100vh; }
+  position: relative; }
   @media screen and (min-width: 50em) {
     .gallery__single-half {
       -webkit-box-flex: 0;
@@ -1122,7 +1119,6 @@ span.menu-icon {
       flex: 0 0 50%; } }
   @media screen and (max-width: 30em) {
     .gallery__single-half {
-      min-height: 100vh;
       -webkit-box-flex: 1;
       box-flex: 1;
       -webkit-flex: 1 0 auto;
@@ -1134,7 +1130,6 @@ span.menu-icon {
   position: relative; }
   @media screen and (max-width: 30em) {
     .gallery__single-half.gallery-image {
-      min-height: 100vh;
       display: -webkit-box;
       display: -moz-box;
       display: box;
@@ -1167,8 +1162,7 @@ span.menu-icon {
 .gallery__single-half.gallery-caption {
   position: relative;
   background-color: #fcd838;
-  padding: 25px;
-  min-height: 100vh; }
+  padding: 25px; }
   .gallery__single-half.gallery-caption p {
     margin: 0; }
 
@@ -3748,7 +3742,7 @@ Copyright (c) 2015 Daniel Eden
     left: 0;
     background-position: center center;
     width: 100%;
-    height: auto;
+    height: 100%;
     -webkit-filter: grayscale(80%) brightness(0.6) opacity(1);
             filter: grayscale(80%) brightness(0.6) opacity(1);
     z-index: 50; }
