--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -213,6 +213,10 @@ main {
 	}
 	p {
 		margin-bottom: 20px;
+		@include media($bp-small) {
+		    font-size: modular-scale(0, 1.3rem);
+		    line-height: modular-scale(1, 1.3rem);
+		}
 	}
 }
 
