--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -74,6 +74,10 @@
     }
     p {
         margin: 0;
+        @include media($bp-small) {
+            font-size: modular-scale(0, 1.1rem);
+            line-height: modular-scale(1, 1.1rem);
+        }
     }
 }
 
