--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -789,7 +789,7 @@ nav:hover {
 .site-width {
   max-width: 100%;
   margin: 0 auto;
-  padding: 0 15%; }
+  padding: 0 8%; }
   @media screen and (max-width: 30em) {
     .site-width {
       padding: 20px 20px 0; } }
@@ -4056,6 +4056,12 @@ aside {
     .rw-wrapper {
       margin-top: 20px;
       width: 100%; } }
+  @media screen and (min-width: 30em) {
+    .rw-wrapper {
+      margin-top: 50px; } }
+  @media screen and (min-width: 50em) {
+    .rw-wrapper {
+      margin-top: 0px; } }
 
 h2.rw-sentence {
   position: relative;
@@ -4067,6 +4073,18 @@ h2.rw-sentence {
       margin: 0 0 0 20px;
       font-size: 2.30996rem;
       line-height: 2.84302rem; } }
+  @media screen and (min-width: 30em) {
+    h2.rw-sentence {
+      text-align: left;
+      margin: 0 0 0 20px;
+      font-size: 6.31309rem;
+      line-height: 6.31309rem; } }
+  @media screen and (min-width: 50em) {
+    h2.rw-sentence {
+      margin: 0 8%;
+      text-align: left;
+      font-size: 6.31309rem;
+      line-height: 6.31309rem; } }
 
 .rw-sentence span {
   font-size: 100%;
@@ -4089,19 +4107,31 @@ h2.rw-sentence {
   overflow: hidden;
   color: #fcd838;
   -webkit-animation: rotateWord 18s linear infinite 0s;
-  animation: rotateWord 18s linear infinite 0s; }
+  animation: rotateWord 18s linear infinite 0s;
+  padding-left: 20px; }
   @media screen and (max-width: 30em) {
     .rw-words-1 span.rotator {
       bottom: -50px;
-      left: 0; } }
+      left: 0;
+      padding-left: 0; } }
+  @media screen and (min-width: 30em) {
+    .rw-words-1 span.rotator {
+      bottom: -100px;
+      left: -20px; } }
+  @media screen and (min-width: 50em) {
+    .rw-words-1 span.rotator {
+      bottom: -100px;
+      left: -10px; } }
 
 span.sq-ft {
-  display: none; }
+  display: inline;
+  font-size: 2.30996rem;
+  line-height: 2.84302rem;
+  color: white; }
   @media screen and (max-width: 30em) {
     span.sq-ft {
       display: inline;
-      font-size: 0.8rem;
-      color: white;
+      font-size: 0.9rem;
       z-index: 150; } }
 
 .rw-words-1 span:nth-child(2) {
