--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -87,9 +87,10 @@ a {
 	color: $grey;
 }
 
-ul {
+ul,
+ol {
 	font-family: $main-body-font;
-	font-weight: 200;
+	font-weight: 400;
 	font-size: modular-scale(0, 1.3rem); 
 	line-height: modular-scale(1, 1.3rem); 
 }
@@ -109,6 +110,7 @@ blockquote {
 	font-style: italic;
 	font-size: modular-scale(3); 
 	line-height: modular-scale(3); 
+
 }
 
 figcaption {
@@ -164,8 +166,8 @@ span.black-highlight {
 			line-height:modular-scale(4, 1.3rem);
 		}
 		@include media($bp-large) {
-			font-size: modular-scale(5, 1.3rem);
-			line-height:modular-scale(5, 1.3rem);
+			font-size: modular-scale(5, 1.4rem);
+			line-height:modular-scale(5, 1.4rem);
 		}
 	}
 	h2 {
@@ -181,6 +183,25 @@ span.black-highlight {
 	}
 }
 
+.default-hero.blog-hero {
+	h1 {
+		font-size: modular-scale(3, 1.3rem);
+		line-height:modular-scale(3, 1.3rem);
+		margin: 0 10%;
+		padding-bottom: 0;
+		color: $white;
+		text-align: left;
+		@include media($bp-med) {
+			font-size: modular-scale(4, 1.3rem);
+			line-height:modular-scale(4, 1.3rem);
+		}
+		@include media($bp-large) {
+			font-size: modular-scale(6, 1.3rem);
+			line-height:modular-scale(6, 1.3rem);
+		}
+	}
+}
+
 // MAIN ============================
 
 .navigation {
@@ -190,13 +211,13 @@ span.black-highlight {
 main {
 	p { 
 		font-family: $main-body-font;
-		font-weight: 200;
+		font-weight: 400;
 		margin-top: 0;
 		margin-bottom: 30px;
 		// letter-spacing: 1px;
 		@include media($bp-large) {
-		    font-size: modular-scale(0);
-		    line-height: modular-scale(1);
+		    font-size: modular-scale(0, 1.6rem);
+		    line-height: modular-scale(1, 1.6rem);
 		}
 	}
 	p.no-space {
@@ -210,6 +231,13 @@ main {
 		color: $black;
 		margin-bottom: 10px;
 		margin-top: 50px;
+	}
+	h2 {
+		font-family: $main-headings;
+		font-size: modular-scale(4, 1.4rem);	
+		line-height: modular-scale(4, 1.3rem);
+		font-weight: 600;
+		color: rgba(0,0,0,0.90);
 	}
 	p {
 		margin-bottom: 20px;
