--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -181,8 +181,7 @@ nav.expanded {
   transform: translate(0,-700px);
   opacity: 0;
   // padding-top: 1em;
-  width: 50%;
-  margin: 0 auto;
+  width: 100%;
   text-align: center;
   -webkit-transition: -webkit-transform .15s, opacity .7s;
   -moz-transition: -moz-transform .15s, opacity .7s;
@@ -201,17 +200,22 @@ nav.expanded {
   padding: 0;
   a {
     color: $black;
-    transition: all 0.5s;
-    &:hover{
-      background-color: $white;
-    }
+    // transition: all 0.5s;
   }
   li {
-    padding: 0;
+    padding: 2px 10%;
     font-size: modular-scale(4,1.2rem);
     line-height: modular-scale(4,1.2rem);
     font-weight: 400;
     font-family: $main-headings;
+    &:hover{
+      background-color: $black;
+      color: $yellow;
+      cursor: pointer;
+      a {
+        color: $yellow;
+      }
+    }
     @include media($bp-small) {
       font-size: modular-scale(2,1rem);
       line-height: modular-scale(2,1rem);
