--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -1,5 +1,5 @@
 .two-column {
-	margin: 60px 0;
+	margin: 60px -20%;
 	@include display(flex);
 	@include align-items(flex-start);
 	@include justify-content(center);
@@ -63,7 +63,7 @@
 
 .services-cta {
 	background: $yellow;
-	padding: 25px;
+	padding: 40px;
 	p {
 		font-size: modular-scale(2, 1.3rem);
 		line-height: modular-scale(2, 1.3rem);
