--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -441,9 +441,10 @@ a {
   text-decoration: none;
   color: #979797; }
 
-ul {
+ul,
+ol {
   font-family: "ff-dagny-web-pro", sans-serif;
-  font-weight: 200;
+  font-weight: 400;
   font-size: 1.3rem;
   line-height: 1.7329rem; }
 
@@ -503,8 +504,8 @@ span.black-highlight {
       line-height: 4.10453rem; } }
   @media screen and (min-width: 50em) {
     .default-hero h1 {
-      font-size: 5.47134rem;
-      line-height: 5.47134rem; } }
+      font-size: 5.89222rem;
+      line-height: 5.89222rem; } }
 .default-hero h2 {
   font-family: "ff-dagny-web-pro", sans-serif;
   font-weight: 300;
@@ -514,18 +515,34 @@ span.black-highlight {
   text-align: left;
   margin: 0 20% 0 10%; }
 
+.default-hero.blog-hero h1 {
+  font-size: 3.07917rem;
+  line-height: 3.07917rem;
+  margin: 0 10%;
+  padding-bottom: 0;
+  color: white;
+  text-align: left; }
+  @media screen and (min-width: 30em) {
+    .default-hero.blog-hero h1 {
+      font-size: 4.10453rem;
+      line-height: 4.10453rem; } }
+  @media screen and (min-width: 50em) {
+    .default-hero.blog-hero h1 {
+      font-size: 7.2933rem;
+      line-height: 7.2933rem; } }
+
 .navigation {
   font-family: "Audimat3000-Regulier", sans-serif; }
 
 main p {
   font-family: "ff-dagny-web-pro", sans-serif;
-  font-weight: 200;
+  font-weight: 400;
   margin-top: 0;
   margin-bottom: 30px; }
   @media screen and (min-width: 50em) {
     main p {
-      font-size: 1.5rem;
-      line-height: 1.9995rem; } }
+      font-size: 1.6rem;
+      line-height: 2.1328rem; } }
 main p.no-space {
   margin-bottom: 0; }
 
@@ -539,6 +556,13 @@ main p.no-space {
   color: black;
   margin-bottom: 10px;
   margin-top: 50px; }
+.main-content h2,
+.blog-entry h2 {
+  font-family: "Audimat3000-Regulier", sans-serif;
+  font-size: 4.42027rem;
+  line-height: 4.10453rem;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.9); }
 .main-content p,
 .blog-entry p {
   margin-bottom: 20px; }
@@ -843,8 +867,7 @@ nav.expanded {
   -ms-transform: translate(0, -700px);
       transform: translate(0, -700px);
   opacity: 0;
-  width: 50%;
-  margin: 0 auto;
+  width: 100%;
   text-align: center;
   -webkit-transition: -webkit-transform .15s, opacity .7s;
   transition: transform .15s, opacity .7s; }
@@ -859,17 +882,19 @@ nav.expanded {
   list-style-type: none;
   padding: 0; }
   #navigation ul a {
-    color: black;
-    -webkit-transition: all 0.5s;
-            transition: all 0.5s; }
-    #navigation ul a:hover {
-      background-color: white; }
+    color: black; }
   #navigation ul li {
-    padding: 0;
+    padding: 2px 10%;
     font-size: 3.7888rem;
     line-height: 3.7888rem;
     font-weight: 400;
     font-family: "Audimat3000-Regulier", sans-serif; }
+    #navigation ul li:hover {
+      background-color: black;
+      color: #fcd838;
+      cursor: pointer; }
+      #navigation ul li:hover a {
+        color: #fcd838; }
     @media screen and (max-width: 30em) {
       #navigation ul li {
         font-size: 1.77689rem;
@@ -1161,13 +1186,12 @@ span.menu-icon {
   .gallery__single-half.gallery-image img {
     position: relative;
     width: 100%;
-    max-height: auto;
-    padding-right: 25px; }
+    max-height: auto; }
 
 .gallery__single-half.gallery-caption {
   position: relative;
   background-color: #fcd838;
-  padding: 25px; }
+  padding: 40px; }
   .gallery__single-half.gallery-caption p {
     margin: 0; }
     @media screen and (max-width: 30em) {
@@ -1192,7 +1216,7 @@ span.menu-icon {
       -ms-flex-order: -1; } }
   .gallery__single:nth-child(even) .gallery__single-half.gallery-image img {
     padding-right: 0;
-    padding-left: 25px; }
+    padding-left: 0; }
 
 .cell {
   height: 100%;
@@ -3760,6 +3784,9 @@ Copyright (c) 2015 Daniel Eden
     z-index: 51;
     margin-top: 100px; }
 
+.default-hero.blog-hero hgroup {
+  margin-top: 50px; }
+
 nav.nav__mobile {
   display: none; }
   @media screen and (min-width: 30em) {
@@ -3813,6 +3840,9 @@ body {
     .blog-entry ul li {
       padding: 7px 0; }
 
+.main-content {
+  padding: 50px; }
+
 @media screen and (min-width: 50em) {
   .blog-entry {
     float: left;
@@ -3820,7 +3850,8 @@ body {
     margin-right: 2.35765%;
     width: 65.88078%;
     margin-left: 0%;
-    padding: 50px 25px; }
+    padding: 50px 25px;
+    padding-right: 50px; }
     .blog-entry:last-child {
       margin-right: 0; } }
 
@@ -4201,15 +4232,15 @@ span.sq-ft {
     opacity: 0; }
   100% {
     opacity: 0; } }
-h2.mission {
+h3.mission {
   font-family: "Audimat3000-Regulier", sans-serif;
-  font-size: 4.42027rem;
-  line-height: 4.10453rem;
+  font-size: 3.31603rem;
+  line-height: 3.07917rem;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.9); }
 
 .two-column {
-  margin: 60px 0;
+  margin: 60px -20%;
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -4301,7 +4332,7 @@ h2.mission {
 
 .services-cta {
   background: #fcd838;
-  padding: 25px; }
+  padding: 40px; }
   .services-cta p {
     font-size: 2.30996rem;
     line-height: 2.30996rem; }
@@ -4360,8 +4391,6 @@ h2.mission {
     position: relative;
     min-height: 200px;
     width: 100%;
-    -webkit-transition: all 0.5s;
-            transition: all 0.5s;
     border-bottom: 2px solid black;
     display: -webkit-box;
     display: -moz-box;
@@ -4426,9 +4455,7 @@ h2.mission {
     .team__container .team__single hgroup {
       position: relative;
       padding: 0 25px;
-      z-index: 4;
-      -webkit-transition: all 0.5s;
-              transition: all 0.5s; }
+      z-index: 4; }
 
 .drop-down-panel {
   padding: 50px 25%;
@@ -4448,20 +4475,9 @@ h2.mission {
       background-color: #fbce06; }
 
 .projects__panel-container {
-  margin-top: 50px; }
-
-.projects__panel {
   width: 100%;
-  height: 300px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+  margin-top: 50px;
   position: relative;
-  -webkit-transition: all 0.5s;
-          transition: all 0.5s;
-  -webkit-filter: grayscale(0.7);
-          filter: grayscale(0.7);
-  padding: 25px;
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -4484,27 +4500,90 @@ h2.mission {
   -ms-justify-content: center;
   -o-justify-content: center;
   justify-content: center;
-  -ms-flex-pack: center; }
-  .projects__panel:hover {
+  -ms-flex-pack: center;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column; }
+
+.projects__panel-link {
+  width: 100%;
+  -webkit-transition: all 0.2s;
+          transition: all 0.2s; }
+  .projects__panel-link:hover .projects__panel-wrap .projects__panel-img {
     -webkit-filter: grayscale(0);
-            filter: grayscale(0); }
-    .projects__panel:hover .color-overlay {
-      background-color: transparent;
-      -webkit-filter: brightness(0.7);
-              filter: brightness(0.7); }
-  .projects__panel .color-overlay {
+            filter: grayscale(0);
+    background-blend-mode: normal;
+    -webkit-filter: brightness(0.3);
+            filter: brightness(0.3); }
+
+.projects__panel-wrap {
+  position: relative;
+  height: 300px; }
+  .projects__panel-wrap h2 {
+    position: absolute;
+    top: 30%;
+    left: 5%;
+    right: 5%;
+    text-align: center;
+    margin: 0 auto; }
+    @media screen and (min-width: 50em) {
+      .projects__panel-wrap h2 {
+        font-size: 6.31309rem;
+        line-height: 6.31309rem; } }
+  .projects__panel-wrap .projects__panel-img {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     position: absolute;
     top: 0;
     left: 0;
-    -webkit-transition: all 0.5s;
-            transition: all 0.5s; }
-  .projects__panel h2 {
-    position: relative;
-    text-align: center;
-    margin: 0 auto; }
+    -webkit-transition: all 0.2s;
+            transition: all 0.2s;
+    padding: 25px;
+    -webkit-filter: grayscale(0);
+            filter: grayscale(0);
+    background-blend-mode: overlay;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    box-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    -o-align-items: center;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-box-pack: center;
+    box-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    -o-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center; }
+    .projects__panel-wrap .projects__panel-img .color-overlay {
+      width: 100%;
+      height: 100%;
+      background-color: rgba(252, 216, 56, 0.4);
+      -webkit-filter: brightness(0.6);
+              filter: brightness(0.6);
+      position: absolute;
+      top: 0;
+      left: 0;
+      -webkit-transition: all 0.2s;
+              transition: all 0.2s; }
 
 .project__testimonial blockquote {
   margin-top: 40px;
