--- a/custom/themes/ingenuity/src/sass/layout/_about.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_about.scss
@@ -4,4 +4,6 @@ h3.mission {
 	line-height: modular-scale(3, 1.3rem);
 	font-weight: 600;
 	color: rgba(0,0,0,0.90);
+	margin-bottom: 40px;
+	margin-top: 20px;
 }
