--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -30,6 +30,7 @@
 @import "layout/home";
 @import "layout/about";
 @import "layout/services";
+@import "layout/blog";
 @import "layout/team";
 @import "layout/projects";
 @import "layout/contact";
